tests/src/frontend/syntax/invalid/pattern_multi_binds_non_overlapping2.sk
base class Foo {
  children =
  | Bar(Int, Int)
  | Baz(Int, Int, Int)
}

fun shouldFail(): String {
  f: Foo = Bar(1, 2);

  f match {
  | Baz(x, y, z)
  | Bar(x, y) ->
    "Fail\n"
  }
}
